--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:242.21870
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.2033-p7370
 
     steps:
       - name: Checkout repository
