--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,15 +65,14 @@ jobs:
       - name: Build Writerside docs using Docker
         run: |
           set -x
-          git config --global --add safe.directory /github/workspace
           echo "Build documentation script started"
           export DISPLAY=:99
           Xvfb :99 &
           git config --global --add safe.directory .
-                       /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
+                       /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir -pdf PDF.xml ./artifacts
           echo "Test existing artifacts"
-          #                              test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
-               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
+                                        test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
+      #               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
 #        uses: JetBrains/writerside-github-action@v4
 #        with:
 #          instance: ${{ env.INSTANCE }}
