--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,10 +68,12 @@ jobs:
           echo "Build documentation script started"
           export DISPLAY=:99
           Xvfb :99 &
-                       /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
+          git config --global --add safe.directory .
+          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
+                       /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts -pdf PDF.xml
           echo "Test existing artifacts"
-          #                              test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
-               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
+                                        test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
+      #               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
 #        uses: JetBrains/writerside-github-action@v4
 #        with:
 #          instance: ${{ env.INSTANCE }}
