--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpAUTO2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: '241.18775'
+  DOCKER_VERSION: '243.21565'
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: 'algolia-indexes-AUTO.zip'
@@ -28,17 +28,18 @@ env:
   ALGOLIA_KEY: '${{ secrets.ALGOLIA_KEY }}'
   CONFIG_JSON_PRODUCT: 'AUTO'
   CONFIG_JSON_VERSION: '1.0'
+  PDF: 'PDF.xml'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.2043-p7414
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+  #  build:
+  #    runs-on: ubuntu-latest
+  #    container: jetbrains/writerside-builder:243.21565
+  #
+  #    steps:
+  #      - name: Checkout repository
+  #        uses: actions/checkout@v4
+  #        with:
+  #          fetch-depth: 0
 
       #      - name: Processing timestamps
       #        run: |
@@ -62,16 +63,16 @@ jobs:
       #          name: timestamps.json
       #          path: timestamps
 
-      - name: Build Writerside docs using Docker
-        run: |
-          set -x
-          echo "Build documentation script started"
-          export DISPLAY=:99
-          Xvfb :99 &
-          git config --global --add safe.directory .
-                           /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
-          echo "Test existing artifacts"
-                          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
+  #      - name: Build Writerside docs using Docker
+  #        run: |
+  #          set -x
+  #          echo "Build documentation script started"
+  #          export DISPLAY=:99
+  #          Xvfb :99 &
+  #          git config --global --add safe.directory .
+  #                           /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
+  #          echo "Test existing artifacts"
+  #                          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
       #               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
 #        uses: JetBrains/writerside-github-action@v4
 #        with:
@@ -79,24 +80,77 @@ jobs:
 #          artifact: ${{ env.ARTIFACT }}
 #          docker-version: ${{ env.DOCKER_VERSION }}
 
-      - name: List artifacts directory
-        run: |
-          ls -alR ./artifacts
+  #      - name: List artifacts directory
+  #        run: |
+  #          ls -alR ./artifacts
+  #
+  #      - name: Save artifact with build results
+  #        uses: actions/upload-artifact@v4
+  #        with:
+  #          name: docs
+  #          path: |
+  #            artifacts/${{ env.ARTIFACT }}
+  #            artifacts/report.json
+  #            artifacts/report.html
+  #            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+  #            artifacts/xliffSrcAUTO.zip
+  #            artifacts/pdfSourceAUTO.pdf
+  #            artifacts/cover.pdf
+  #            artifacts/pdfSourceAUTO.html
+  #          retention-days: 7
 
-      - name: Save artifact with build results
+  build-site1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository for site2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Define instance id
+        run: |
+          INSTANCE_ID="${INSTANCE#*/}"
+          INSTANCE_ID_UPPER=$(echo "$INSTANCE_ID" | tr '[:lower:]' '[:upper:]')
+          echo "INSTANCE_ID_UPPER=$INSTANCE_ID_UPPER" >> $GITHUB_ENV
+          echo "Extracted ID: $INSTANCE_ID_UPPER"
+
+      - name: Build Writerside docs using Docker
+        uses: JetBrains/writerside-github-action@v4
+        with:
+          instance: ${{ env.INSTANCE }}
+          artifact: ${{ env.ARTIFACT }}
+          docker-version: ${{ env.DOCKER_VERSION }}
+      #          pdf: ${{ env.PDF }}
+
+      - name: Save Not-Yet artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docs
+          name: docs-site1
           path: |
             artifacts/${{ env.ARTIFACT }}
             artifacts/report.json
-            artifacts/report.html
             artifacts/${{ env.ALGOLIA_ARTIFACT }}
-            artifacts/xliffSrcAUTO.zip
-            artifacts/pdfSourceAUTO.pdf
-            artifacts/cover.pdf
-            artifacts/pdfSourceAUTO.html
+          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
+          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
           retention-days: 7
+
+  # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
+  test:
+    # Requires build job results
+    needs: build-site1
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: docs-site1
+          path: artifacts
+
+      - name: Test documentation
+        uses: JetBrains/writerside-checker-action@v1
+        with:
+          instance: ${{ env.INSTANCE }}
 
   build-site2:
     runs-on: ubuntu-latest
@@ -113,6 +167,10 @@ jobs:
           artifact: 'webHelpT2-all.zip'
           docker-version: ${{ env.DOCKER_VERSION }}
 
+      - name: List artifacts directory
+        run: |
+          ls -alR ./artifacts
+
       - name: Save Not-Yet artifact
         uses: actions/upload-artifact@v4
         with:
@@ -121,24 +179,6 @@ jobs:
             artifacts/webHelpT2-all.zip
             artifacts/report.json
           retention-days: 7
-
-  # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
-  test:
-    # Requires build job results
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: Test documentation
-        uses: JetBrains/writerside-checker-action@v1
-        with:
-          instance: ${{ env.INSTANCE }}
 
   test-site2:
     needs: build-site2
@@ -157,7 +197,7 @@ jobs:
 
   publish-indexes:
     # Requires the build-job results
-    needs: build
+    needs: build-site1
     runs-on: ubuntu-latest
     container:
       image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
@@ -166,7 +206,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: docs
+          name: docs-site1
 
       - name: Unzip artifact
         run: |
@@ -184,13 +224,13 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     # Requires the build job results
-    needs: build
+    needs: build-site1
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: docs
+          name: docs-site1
 
       - name: Download Not-Yet artifacts
         uses: actions/download-artifact@v4
