--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ env:
   PDF: 'PDF.xml'
 
 jobs:
-  #  build:
+  #  build-site1:
   #    runs-on: ubuntu-latest
   #    container: jetbrains/writerside-builder:243.21565
   #
@@ -41,27 +41,27 @@ jobs:
   #        with:
   #          fetch-depth: 0
 
-      #      - name: Processing timestamps
-      #        run: |
-      #          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
-      #          mkdir -p ./timestamps
-      #          echo "{" > ./timestamps/timestamps.json
-      #          git ls-tree -r --name-only HEAD | grep -E '\.(topic|md)$' | xargs -n 1 -P 4 -I{} bash -c 'echo -e "\"$0\": \"$(git log -1 --format="%at" -- "$0")\","' {} >> ./timestamps/timestamps.json
-      #          sed -i '$ s/.$//' ./timestamps/timestamps.json
-      #          echo "}" >> ./timestamps/timestamps.json
-      #          cat ./timestamps/timestamps.json
-      #
-      #      - name: Store timestamps file
-      #        uses: actions/upload-artifact@v4
-      #        with:
-      #          name: timestamps.json
-      #          path: ./timestamps/timestamps.json
-      #
-      #      - name: Download timestamps
-      #        uses: actions/download-artifact@v4
-      #        with:
-      #          name: timestamps.json
-      #          path: timestamps
+  #      - name: Processing timestamps
+  #        run: |
+  #          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
+  #          mkdir -p ./timestamps
+  #          echo "{" > ./timestamps/timestamps.json
+  #          git ls-tree -r --name-only HEAD | grep -E '\.(topic|md)$' | xargs -n 1 -P 4 -I{} bash -c 'echo -e "\"$0\": \"$(git log -1 --format="%at" -- "$0")\","' {} >> ./timestamps/timestamps.json
+  #          sed -i '$ s/.$//' ./timestamps/timestamps.json
+  #          echo "}" >> ./timestamps/timestamps.json
+  #          cat ./timestamps/timestamps.json
+  #
+  #      - name: Store timestamps file
+  #        uses: actions/upload-artifact@v4
+  #        with:
+  #          name: timestamps.json
+  #          path: ./timestamps/timestamps.json
+  #
+  #      - name: Download timestamps
+  #        uses: actions/download-artifact@v4
+  #        with:
+  #          name: timestamps.json
+  #          path: timestamps
 
   #      - name: Build Writerside docs using Docker
   #        run: |
@@ -70,16 +70,11 @@ jobs:
   #          export DISPLAY=:99
   #          Xvfb :99 &
   #          git config --global --add safe.directory .
-  #                           /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
+  #                           /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts -pdf PDF.xml
   #          echo "Test existing artifacts"
   #                          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
-      #               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
-#        uses: JetBrains/writerside-github-action@v4
-#        with:
-#          instance: ${{ env.INSTANCE }}
-#          artifact: ${{ env.ARTIFACT }}
-#          docker-version: ${{ env.DOCKER_VERSION }}
-
+  #               test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
+  #
   #      - name: List artifacts directory
   #        run: |
   #          ls -alR ./artifacts
@@ -89,14 +84,14 @@ jobs:
   #        with:
   #          name: docs
   #          path: |
-  #            artifacts/${{ env.ARTIFACT }}
-  #            artifacts/report.json
-  #            artifacts/report.html
-  #            artifacts/${{ env.ALGOLIA_ARTIFACT }}
-  #            artifacts/xliffSrcAUTO.zip
-  #            artifacts/pdfSourceAUTO.pdf
-  #            artifacts/cover.pdf
-  #            artifacts/pdfSourceAUTO.html
+  #            #            artifacts/${{ env.ARTIFACT }}
+  #            #            artifacts/report.json
+  #            #            artifacts/report.html
+  #            #            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+  #            #            artifacts/xliffSrcAUTO.zip
+  #            #            artifacts/pdfSourceAUTO.pdf
+  #                  artifacts/pdfSourceAUTO.pdf
+  #                  artifacts/pdfSourceAUTO.html
   #          retention-days: 7
 
   build-site1:
@@ -120,18 +115,18 @@ jobs:
           instance: ${{ env.INSTANCE }}
           artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
-      #          pdf: ${{ env.PDF }}
+          pdf: ${{ env.PDF }}
 
       - name: Save Not-Yet artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs-site1
           path: |
-            artifacts/${{ env.ARTIFACT }}
-            artifacts/report.json
-            artifacts/${{ env.ALGOLIA_ARTIFACT }}
-          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
-          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
+            #            artifacts/${{ env.ARTIFACT }}
+            #            artifacts/report.json
+            #            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
+                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
           retention-days: 7
 
   # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
