--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,18 +115,18 @@ jobs:
           instance: ${{ env.INSTANCE }}
           artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
-          pdf: ${{ env.PDF }}
+      #          pdf: ${{ env.PDF }}
 
       - name: Save Not-Yet artifact
         uses: actions/upload-artifact@v4
         with:
           name: docs-site1
           path: |
-            #            artifacts/${{ env.ARTIFACT }}
-            #            artifacts/report.json
-            #            artifacts/${{ env.ALGOLIA_ARTIFACT }}
-                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
-                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
+            artifacts/${{ env.ARTIFACT }}
+            artifacts/report.json
+            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
+          #                  artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
           retention-days: 7
 
   # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
