--- a/.github/workflows/deploy-backup.yml
+++ b/.github/workflows/deploy-backup.yml
@@ -25,7 +25,6 @@ env:
   ALGOLIA_ARTIFACT: 'algolia-indexes-AUTO.zip'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_test'
-  ALGOLIA_KEY: '${{ secrets.ALGOLIA_KEY }}'
   CONFIG_JSON_PRODUCT: 'AUTO'
   CONFIG_JSON_VERSION: '1.0'
   PDF: 'PDF.xml'
@@ -205,14 +204,19 @@ jobs:
 
       - name: Unzip artifact
         run: |
-          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
-          env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
-          update-index \
-          --application-name ${{env.ALGOLIA_APP_NAME}} \
-          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
-          --product ${{env.CONFIG_JSON_PRODUCT}} \
-          --version ${{env.CONFIG_JSON_VERSION}} \
-          --index-directory algolia-indexes
+          if [ -z "${{ secrets.ALGOLIA_KEY }}" ]; then
+            echo "ALGOLIA_KEY secret is not set in GitHub Secrets"
+            exit 1
+          else
+            unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+            env "algolia-key=${{ secrets.ALGOLIA_KEY }}" java -jar /opt/builder/help-publication-agent.jar \
+            update-index \
+            --application-name ${{env.ALGOLIA_APP_NAME}} \
+            --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+            --product ${{env.CONFIG_JSON_PRODUCT}} \
+            --version ${{env.CONFIG_JSON_VERSION}} \
+            --index-directory algolia-indexes
+          fi
 
   deploy:
     environment:
