--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,27 +5,16 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  pages: write
-
 env:
-  INSTANCE: Writerside2/auto
+  INSTANCE: 'Writerside2/hi'
   DOCKER_VERSION: '243.21565'
-  ALGOLIA_APP_NAME: ERUSDW4898
-  ALGOLIA_INDEX_NAME: index_test
-  CONFIG_JSON_PRODUCT: AUTO
-  CONFIG_JSON_VERSION: 1.0
-  PDF: PDF.xml
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     outputs:
       algolia_artifact: ${{ steps.define-ids.outputs.algolia_artifact }}
       artifact: ${{ steps.define-ids.outputs.artifact }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -59,7 +48,7 @@ jobs:
           artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
-      - name: Save artifacts
+      - name: Save artifact with build results
         uses: actions/upload-artifact@v4
         with:
           name: docs
@@ -67,85 +56,4 @@ jobs:
             artifacts/${{ env.ARTIFACT }}
             artifacts/report.json
             artifacts/${{ env.ALGOLIA_ARTIFACT }}
-
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download documentation artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: Test documentation
-        uses: JetBrains/writerside-checker-action@v1
-        with:
-          instance: ${{ env.INSTANCE }}
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download documentation artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: List downloaded files
-        run: |
-          echo "Listing downloaded artifacts..."
-          ls -la artifacts
-
-      - name: Unzip documentation artifact
-        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.artifact }}" -d dir
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Package and upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dir
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
-  publish-indexes:
-    needs: build
-    runs-on: ubuntu-latest
-    container:
-      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
-
-    steps:
-      - name: Download Algolia artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: Unzip Algolia artifact
-        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.algolia_artifact }}" -d algolia-indexes
-
-      - name: Update Algolia Index
-        run: |
-          if [ -z "${{ secrets.ALGOLIA_KEY }}" ]; then
-            echo "ALGOLIA_KEY secret is not set in GitHub Secrets"
-            exit 1
-          else
-            env "algolia-key=${{ secrets.ALGOLIA_KEY }}" java -jar /opt/builder/help-publication-agent.jar \
-            update-index \
-            --application-name ${{ env.ALGOLIA_APP_NAME }} \
-            --index-name ${{ env.ALGOLIA_INDEX_NAME }} \
-            --product ${{ env.CONFIG_JSON_PRODUCT }} \
-            --version ${{ env.CONFIG_JSON_VERSION }} \
-            --index-directory algolia-indexes/ \
-            2>&1 | tee algolia-update-index-log.txt
-          fi
+          retention-days: 7
