--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -11,6 +11,7 @@
     <instance src="m.tree" web-path="/m/"/>
     <instance src="t.tree" web-path="/t/"/>
     <instance src="auto.tree"/>
+    <instance src="hi.tree"/>
     <build-config dir="configs"/>
     <settings>
 <!--        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>-->
