--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,6 @@ jobs:
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
-          artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
       - name: Save artifact with build results
@@ -62,9 +61,9 @@ jobs:
         with:
           name: docs
           path: |
-            artifacts/${{ env.ARTIFACT }}
+            artifacts/${{ steps.define-ids.outputs.artifact }}
             artifacts/report.json
-            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+            artifacts/${{ steps.define-ids.outputs.algolia_artifact }}
           retention-days: 7
 
   build-pdf:
