--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -14,7 +14,7 @@
     <instance src="hi.tree"/>
     <build-config dir="configs"/>
     <settings>
-<!--        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>-->
-<!--        <default-property element-name="img" property-name="thumbnail" value="true" />-->
+        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
+        <default-property element-name="img" property-name="thumbnail" value="true"/>
     </settings>
 </ihp>
