--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   INSTANCE: 'Writerside2/auto'
-  DOCKER_VERSION: '233.14938'
+  DOCKER_VERSION: '2.1.2101-p8069'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
   CONFIG_JSON_PRODUCT: 'AUTO'
