Docker 2.1.2122-p8252 multi checker NEW

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,7 +144,7 @@ jobs:
           path: artifacts
 
       - name: Test documentation
-        uses: JetBrains/writerside-checker-action@v1
+        uses: siarb/siar-checker@v1
         with:
           instance: ${{ env.INSTANCE }}
 
