Docker 243.22562 NEW ACTION group

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,9 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside2/auto'
-  DOCKER_VERSION: '243.22562'
+  INSTANCE: 'Writerside2/hi'
+  IS_GROUP: 'false'
+  DOCKER_VERSION: '2.1.2122-p8252'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
   CONFIG_JSON_PRODUCT: 'AUTO'
@@ -70,6 +71,7 @@ jobs:
         with:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
+          is-group: ${{ env.IS_GROUP }}
 
       - name: Save artifact with build results
         uses: actions/upload-artifact@v4
@@ -147,6 +149,7 @@ jobs:
         uses: JetBrains/writerside-checker-action@v1
         with:
           instance: ${{ env.INSTANCE }}
+          is-group: ${{ env.IS_GROUP }}
 
 
   #  build-search-index:
