Docker 243.22562 NEW ACTION Algolia

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,8 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside2/auto'
+  INSTANCE: 'Writerside2/test'
+  IS_GROUP: 'true'
   DOCKER_VERSION: '2.1.2122-p8252'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
@@ -70,6 +71,7 @@ jobs:
         with:
           instance: ${{ env.INSTANCE }}
           docker-version: ${{ env.DOCKER_VERSION }}
+          is-group: ${{ env.IS_GROUP }}
 
       - name: Save artifact with build results
         uses: actions/upload-artifact@v4
@@ -79,6 +81,8 @@ jobs:
             artifacts/${{ steps.define-ids.outputs.artifact }}
             artifacts/report.json
             artifacts/${{ steps.define-ids.outputs.algolia_artifact }}
+            artifacts/algolia-indexes-AUTO.zip
+            artifacts/algolia-indexes-HI.zip
           retention-days: 7
 
   build-pdf:
@@ -147,6 +151,7 @@ jobs:
         uses: JetBrains/writerside-checker-action@v1
         with:
           instance: ${{ env.INSTANCE }}
+          is-group: ${{ env.IS_GROUP }}
 
 
   #  build-search-index:
@@ -312,7 +317,9 @@ jobs:
           name: docs
           path: artifacts
       - name: Unzip Algolia artifact
-        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.algolia_artifact }}" -d algolia-indexes
+        run: |
+          unzip -O UTF-8 -qq "artifacts/algolia-indexes-AUTO.zip" -d algolia-indexes
+          unzip -O UTF-8 -qq "artifacts/algolia-indexes-HI.zip" -d algolia-indexes
       - name: Update Algolia Index
         run: |
           if [ -z "${{ secrets.ALGOLIA_KEY }}" ]; then
